force-app/main/default/objects/Project__c/fields/Acquried_all_resourses__c.field-meta.xml
<CustomField>
    <fullName>Acquried_all_resourses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aquired all resourses</label>
    <type>Checkbox</type>
</CustomField>