force-app/main/default/objects/Project__c/fields/All_Functional_Requirements_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>All_Functional_Requirements_Fulfilled__c</fullName>
    <label>All Functional Requirements Fulfilled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>