force-app/main/default/objects/Project__c/fields/All_required_information_is_Gathered__c.field-meta.xml
<CustomField>
    <fullName>All_required_information_is_Gathered__c</fullName>
    <label>All required information is Gathered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>