force-app/main/default/objects/Project__c/fields/Approval_for_Development__c.field-meta.xml
<CustomField>
    <fullName>Approval_for_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval for Development</label>
    <type>Checkbox</type>
</CustomField>