force-app/main/default/objects/Project__c/fields/Approval_Testing__c.field-meta.xml
<CustomField>
    <fullName>Approval_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Testing</label>
    <type>Checkbox</type>
</CustomField>