force-app/main/default/objects/Project__c/fields/Approve_Design__c.field-meta.xml
<CustomField>
    <fullName>Approve_Design__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approve Design</label>
    <type>Checkbox</type>
</CustomField>