force-app/main/default/objects/Project__c/fields/Bug_Fixing__c.field-meta.xml
<CustomField>
    <fullName>Bug_Fixing__c</fullName>
    <label>Bug Fixing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>