force-app/main/default/objects/Project__c/fields/Database_Integration_is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Database_Integration_is_Completed__c</fullName>
    <label>Database Integration is Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>