force-app/main/default/objects/Project__c/fields/Designing_Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Designing_Test_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Designing Test Case</label>
    <type>Checkbox</type>
</CustomField>