force-app/main/default/objects/Project__c/fields/Difficulties_in_early_stages__c.field-meta.xml
<CustomField>
    <fullName>Difficulties_in_early_stages__c</fullName>
    <label>Difficulties in early stages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>