force-app/main/default/objects/Project__c/fields/Discuss_Business_Pain_Point__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Business_Pain_Point__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discuss Business Pain Point</label>
    <type>Checkbox</type>
</CustomField>