force-app/main/default/objects/Project__c/fields/Execution_Documentation_of_test_cases__c.field-meta.xml
<CustomField>
    <fullName>Execution_Documentation_of_test_cases__c</fullName>
    <label>Execution &amp; Documentation of test cases:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>