force-app/main/default/objects/Project__c/fields/Frontend__c.field-meta.xml
<CustomField>
    <fullName>Frontend__c</fullName>
    <label>Frontend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>