force-app/main/default/objects/Project__c/fields/Functional_Requirement_Gathered__c.field-meta.xml
<CustomField>
    <fullName>Functional_Requirement_Gathered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Functional Requirement Gathered</label>
    <type>Checkbox</type>
</CustomField>