force-app/main/default/objects/Project__c/fields/No_of_Assigned_Employees_count__c.field-meta.xml
<CustomField>
    <fullName>No_of_Assigned_Employees_count__c</fullName>
    <label>No of Assigned Employees in Draft</label>
    <summaryFilterItems>
        <field>Project_Assignment__c.Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Assignment__c.Project_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>