force-app/main/default/objects/Project__c/fields/No_of_Developers__c.field-meta.xml
<CustomField>
    <fullName>No_of_Developers__c</fullName>
    <label>No of Developers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>