force-app/main/default/objects/Project__c/fields/Operational_Requirement_Gathered__c.field-meta.xml
<CustomField>
    <fullName>Operational_Requirement_Gathered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operational Requirement Gathered</label>
    <type>Checkbox</type>
</CustomField>