force-app/main/default/objects/Project__c/fields/Project_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Contact_Name__c</fullName>
    <formula>Contact_Name__r.FirstName  +  Contact_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Contact Name</label>
    <type>Text</type>
</CustomField>