force-app/main/default/objects/Project__c/fields/Project_Skills__c.field-meta.xml
<CustomField>
    <fullName>Project_Skills__c</fullName>
    <label>Project Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Administrator</fullName>
            </value>
            <value>
                <fullName>CPQ Developer</fullName>
            </value>
            <value>
                <fullName>LWC Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce QA Tester</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>