force-app/main/default/objects/Project__c/fields/Re_confirm_requirement_with_client__c.field-meta.xml
<CustomField>
    <fullName>Re_confirm_requirement_with_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-confirm requirement with client</label>
    <type>Checkbox</type>
</CustomField>