force-app/main/default/objects/Project__c/fields/Tentative_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Start_Date__c</fullName>
    <label>Tentative Start Date</label>
    <type>Date</type>
</CustomField>