force-app/main/default/objects/Project__c/fields/Test_Success_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Test_Success_Ratio__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Test Success Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>