force-app/main/default/objects/Project__c/fields/UAT_Team__c.field-meta.xml
<CustomField>
    <fullName>UAT_Team__c</fullName>
    <label>UAT Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>