force-app/main/default/objects/Project__c/recordTypes/Project_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Project_RecordType</fullName>
    <active>true</active>
    <label>Project RecordType</label>
</RecordType>