force-app/main/default/objects/Project__c/validationRules/CheckPath.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckPath</fullName>
    <active>false</active>
    <errorConditionFormula>AND(CASE( Stage__c ,
&quot;Initiated&quot;,1,
&quot;Requirements Gathring&quot;,2,


0)
&gt; 
CASE(PRIORVALUE(Stage__c),
&quot;Initiated&quot;,1,
&quot;Requirements Gathring&quot;,2,


0) +1)</errorConditionFormula>
    <errorMessage>First you need to complete current path only then you can go forward</errorMessage>
</ValidationRule>