force-app/main/default/objects/Project__c/validationRules/EmployeesNotAvailable.validationRule-meta.xml
<ValidationRule>
    <fullName>EmployeesNotAvailable</fullName>
    <active>false</active>
    <errorConditionFormula>( ISPICKVAL( Stage__c, &apos;Draft&apos;) &amp;&amp; (No_of_Assigned_Employees_count__c &lt;  No_of_Architects__c +  No_of_Designers__c +  No_of_Developers__c +  No_of_Managers__c +  No_of_Testers__c ) )</errorConditionFormula>
    <errorMessage>Requested No of Employees not available at the moment.</errorMessage>
</ValidationRule>