force-app/main/default/objects/Project__c/listViews/Cyntexa_projects.listView-meta.xml
<ListView>
    <fullName>Cyntexa_projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Skills__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>Project_Amount__c</columns>
    <columns>Project_Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Cyntexa projects</label>
</ListView>